updated shop.html with a new line

--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
   </header>
 
   <section class="hero">
-    <div class="hero-text">SHOP AT AVE</div>
+    <div class="hero-text">DO YOU LIKE FASHION?</div>
   </section>
 
   <main class="main-content">
