added image to hello world

--- a/shop.html
+++ b/shop.html
@@ -41,7 +41,7 @@
     <section class="products">
         <div class="product">
           <span class="label new">New</span>
-          <img src="sneakers.jpg" alt="Sneakers">
+          <img src="arsenal 1.jpg" alt="Sneakers">
           <h3>Ultraboost 21 PrimeBlue Shoes</h3>
           <p class="price">$150</p>
           <a href="product-url-1" class="btn">View details</a>
