--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <h1 class="logo">AVENUE FASHION</h1>
+      <h1 class="logo">FASHION with usS</h1>
       <nav class="nav">
         <a href="#">Mens</a>
         <a href="#">Womens</a>
