added new image

--- a/shop.html
+++ b/shop.html
@@ -44,7 +44,7 @@
           <img src="arsenal 1.jpg" alt="Sneakers">
           <h3>Ultraboost 21 PrimeBlue Shoes</h3>
           <p class="price">$150</p>
-          <a href="product-url-1" class="btn">View details</a>
+          <a href="arsenal 2.jpg" class="btn">View details</a>
           <a href="cart-url-1" class="btn add-to-cart">Add to Cart</a>
         </div>
         <div class="product">
